--- a/australian-musicians-map/package.json
+++ b/australian-musicians-map/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
+    "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
